src/app/feature/public/ddx-homepage-tables.scss
@import '../../.././styles.scss';

:host {
  .ddx__table {
    width: 100%;
    height: 100%;
    font-size: 14px;
    table-layout: fixed;

    tbody.ddx-table__body {
      width: 100%;
      height: 100%;
      max-height: 500px;
      overflow-y: auto;
      display: inline-block;

      tr {
        cursor: pointer;

        &:nth-child(odd) {
          background: rgba($ddx-light, 0.1);
        }

        &:hover {
          background: rgba($ddx-yellow, 0.2);
        }
      }
    }

    thead.ddx-table__head {
      width: 100%;
      display: flex;
    }

    thead.ddx-table__head,
    tbody.ddx-table__body {
      tr {
        width: 100%;
        justify-content: space-between;

        th,
        td {
          @extend .body;

          padding: 8px;
          box-sizing: border-box;

          flex: 1;
          min-width: 0;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;

          text-align: left;

          &.row-index {
            flex: 1;
            min-width: 20px;
            text-align: center;
          }

          &.row-small {
            flex: 4;
          }

          &.row-big {
            flex: 7;
          }

          &.row-change {
            flex: 1;
            text-align: center;
          }

          &.up,
          &.green {
            color: $ddx-green;
          }

          &.down,
          &.red {
            color: $ddx-red;
          }
        }
      }
    }
  }
}

@media screen and (min-width: $break-narrow-mobile) {
  :host {
    min-width: 320px;

    .ddx__table {
      overflow-x: hidden;
      min-width: unset;
    }
  }
}

